Opened 9 years ago

Closed 9 years ago

#4493 closed defect (fixed)

AVCI decoding regression

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: avformat
Version: git-master Keywords: mov AVID h264 regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

http://samples.ffmpeg.org/ffmpeg-bugs/trac/ticket524/
The samples AVCI50.mov and AVCI100.mov from ticket #524 (and ticket #2106) cannot be decoded since fb3fb1d0

$ ffmpeg -i AVCI50.mov
ffmpeg version N-71497-gedbb9b5 Copyright (c) 2000-2015 the FFmpeg developers
  built with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      54. 22.101 / 54. 22.101
  libavcodec     56. 34.100 / 56. 34.100
  libavformat    56. 30.100 / 56. 30.100
  libavdevice    56.  4.100 / 56.  4.100
  libavfilter     5. 14.100 /  5. 14.100
  libswscale      3.  1.101 /  3.  1.101
  libswresample   1.  1.100 /  1.  1.100
  libpostproc    53.  3.100 / 53.  3.100
[h264 @ 0x23815a0] non-existing PPS 0 referenced
[h264 @ 0x23815a0] decode_slice_header error
[h264 @ 0x2dcb5a0] non-existing PPS 0 referenced
[h264 @ 0x2dcb5a0] decode_slice_header error
...

...

[h264 @ 0x23815a0] non-existing PPS 0 referenced
[h264 @ 0x23815a0] decode_slice_header error
[h264 @ 0x23815a0] non-existing PPS 0 referenced
[h264 @ 0x23815a0] decode_slice_header error
[h264 @ 0x23815a0] no frame!
[mov,mp4,m4a,3gp,3g2,mj2 @ 0x23803a0] decoding for stream 0 failed
[mov,mp4,m4a,3gp,3g2,mj2 @ 0x23803a0] Could not find codec parameters for stream 0 (Video: h264 (AVin / 0x6E695641), none(pc), 1440x1080, 55731 kb/s): unspecified pixel format
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Guessed Channel Layout for  Input Stream #0.1 : stereo
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'AVCI50.mov':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    creation_time   : 2011-09-29 14:51:08
    timecode        : 00:00:29;00
  Duration: 00:00:18.02, start: 0.000000, bitrate: 57269 kb/s
    Stream #0:0(eng): Video: h264 (AVin / 0x6E695641), none(pc), 1440x1080, 55731 kb/s, SAR 4:3 DAR 16:9, 29.97 fps, 29.97 tbr, 29970 tbn, 59940 tbc (default)
    Metadata:
      creation_time   : 2011-09-29 14:51:08
      handler_name    : Apple Alias Data Handler
    Stream #0:1(eng): Audio: pcm_s16be (twos / 0x736F7774), 48000 Hz, 2 channels, s16, 1536 kb/s (default)
    Metadata:
      creation_time   : 2011-09-29 14:51:08
      handler_name    : Apple Alias Data Handler
    Stream #0:2(eng): Data: none (tmcd / 0x64636D74), 0 kb/s (default)
    Metadata:
      creation_time   : 2011-09-29 14:51:14
      handler_name    : Apple Alias Data Handler
      timecode        : 00:00:29;00
At least one output file must be specified
$ ffmpeg -i AVCI100.mov
ffmpeg version N-71497-gedbb9b5 Copyright (c) 2000-2015 the FFmpeg developers
  built with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      54. 22.101 / 54. 22.101
  libavcodec     56. 34.100 / 56. 34.100
  libavformat    56. 30.100 / 56. 30.100
  libavdevice    56.  4.100 / 56.  4.100
  libavfilter     5. 14.100 /  5. 14.100
  libswscale      3.  1.101 /  3.  1.101
  libswresample   1.  1.100 /  1.  1.100
  libpostproc    53.  3.100 / 53.  3.100
[h264 @ 0x2a405a0] non-existing PPS 0 referenced
[h264 @ 0x2a405a0] decode_slice_header error
[h264 @ 0x2a405a0] non-existing PPS 0 referenced
[h264 @ 0x2a405a0] decode_slice_header error

...

...

[h264 @ 0x2a405a0] non-existing PPS 0 referenced
[h264 @ 0x2a405a0] decode_slice_header error
[h264 @ 0x2a405a0] non-existing PPS 0 referenced
[h264 @ 0x2a405a0] decode_slice_header error
[h264 @ 0x2a405a0] no frame!
[mov,mp4,m4a,3gp,3g2,mj2 @ 0x2a3f3a0] decoding for stream 0 failed
[mov,mp4,m4a,3gp,3g2,mj2 @ 0x2a3f3a0] Could not find codec parameters for stream 0 (Video: h264 (AVin / 0x6E695641), none(pc), 1920x1080, 113182 kb/s): unspecified pixel format
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Guessed Channel Layout for  Input Stream #0.1 : stereo
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'AVCI100.mov':
  Metadata:
    major_brand     : qt
    minor_version   : 537199360
    compatible_brands: qt
    creation_time   : 2011-09-29 14:52:16
    timecode        : 00:00:00;00
  Duration: 00:00:03.94, start: 0.000000, bitrate: 114723 kb/s
    Stream #0:0(eng): Video: h264 (AVin / 0x6E695641), none(pc), 1920x1080, 113182 kb/s, 29.97 fps, 29.97 tbr, 29970 tbn, 59940 tbc (default)
    Metadata:
      creation_time   : 2011-09-29 14:52:16
      handler_name    : Apple Alias Data Handler
    Stream #0:1(eng): Audio: pcm_s16be (twos / 0x736F7774), 48000 Hz, 2 channels, s16, 1536 kb/s (default)
    Metadata:
      creation_time   : 2011-09-29 14:52:16
      handler_name    : Apple Alias Data Handler
    Stream #0:2(eng): Data: none (tmcd / 0x64636D74), 0 kb/s (default)
    Metadata:
      creation_time   : 2011-09-29 14:52:18
      handler_name    : Apple Alias Data Handler
      timecode        : 00:00:00;00
At least one output file must be specified

Change History (1)

comment:1 by Michael Niedermayer, 9 years ago

Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.